--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,70 @@ table, th, td {
   
   margin: 0 auto; /* Center the image */
   display: block;
+  position: relative;  
+  width: 150px;       /* Set the width based on the largest rectangle (image1) */
+  height: 150px;      /* Set the height based on the tallest rectangle (image2 and image3) */
 }
+
+/* Overlapping rectangle styles */
+.rectangle {
+  position: absolute;
+  background-color: #d3d3d3; /* Grey color */
+  border: #000000 solid 1px; /* Black border */
+}
+
+.image1 {
+  width: 411px;
+  height: 232px;
+  top: 110%;
+  right: 8%;
+  transform: translate(50%, -50%);
+  z-index: 2;
+}
+
+.image2 {
+  width: 411px;
+  height: 232px;
+  top: 50%;
+  left: 110%;
+  transform: translate(-150%, -50%);
+  z-index: 1;
+}
+
+
+
+.image3 {
+  width: 411px;
+  height: 232px;
+  top: 1%;
+  left: 80%;
+  transform: translate(-50%, -50%);
+  z-index: 3;
+  
+}
+
+/*
+Overlapping image styles - Commented out
+.image-box {
+  position: absolute;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.image1 {
+  background-image: url('path_to_image1.jpg');
+}
+
+.image2 {
+  background-image: url('path_to_image2.jpg');
+}
+
+.image3 {
+  background-image: url('path_to_image3.jpg');
+}
+*/
+
+
 
 .project-details td {
   padding: 100px;  /* Adjust this value as needed */
@@ -396,12 +459,14 @@ table, th, td {
   flex-basis: 30%; /* Takes up 30% of the container width */
   padding-left: 200px;
   padding-right: 20px; /* Adds some space to the right */
+  margin-top: 50px;
 }
 
 .right-section {
   flex-basis: 70%; /* Takes up 70% of the container width */
   padding-right: 300px;
   padding-left: 20px; /* Adds some space to the left */
+  margin-top: 50px;
 }
 
 .right-section p:not(:last-child) {
