--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,600;1,300&family=ZCOOL+XiaoWei&display&family=Marcellus&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -142,6 +144,7 @@ a{
 .text {
   font-size: 50px;
   font-weight: 600;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .blinking-cursor::after {
@@ -514,3 +517,62 @@ Overlapping image styles - Commented out
   z-index: 2;  /* This ensures it's above the particles background */
 }
 
+
+/* About */
+
+.two-columns{
+  display: flex;
+  align-items: center;
+}
+
+.about{
+  margin-left: 0rem;
+}
+
+p.short-about{
+  width: 40rem;
+  line-height: 2rem;
+}
+
+
+
+h1{
+  font-family: 'ZCOOL XiaoWei', serif;
+  color: #28282B;
+  margin-bottom: 1rem;
+  font-size: 46px;
+  font-weight: 400;
+  max-width: 800px;
+  line-height: 54px;
+}
+
+p{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+  max-width: 900px;
+  line-height: 30px;
+  padding-bottom:  18px;
+  margin-bottom: 18px;
+  color:#28282B;
+}
+
+main{
+  max-width: 80em;
+  min-width: 30em;
+  margin: 0 auto;
+  height: 100%;
+  margin-top: 0rem;
+} 
+
+.tools{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  font-weight: lighter;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.Icons8{
+  
+  text-align: right;
+}
