--- a/css/style.css
+++ b/css/style.css
@@ -358,6 +358,10 @@ body {
   gap: 60px; /* Space between cells */
 }
 
+.project-info .info p {
+  margin-bottom: -9px;  /* Adjust this value as needed */
+}
+
 .row {
   display: flex;
 }
@@ -393,6 +397,12 @@ table, th, td {
   border: #000000 solid 1px; /* Black border */
 }
 
+.rectangle img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;  /* Ensures the image covers the rectangle without distorting */
+  display: block;     /* Removes any default spacing/margin */
+}
 .image1 {
   width: 411px;
   height: 232px;
@@ -400,6 +410,7 @@ table, th, td {
   right: 8%;
   transform: translate(50%, -50%);
   z-index: 2;
+  
 }
 
 .image2 {
@@ -409,6 +420,7 @@ table, th, td {
   left: 110%;
   transform: translate(-150%, -50%);
   z-index: 1;
+  
 }
 
 
@@ -420,6 +432,7 @@ table, th, td {
   left: 80%;
   transform: translate(-50%, -50%);
   z-index: 3;
+  
   
 }
 
@@ -454,7 +467,7 @@ Overlapping image styles - Commented out
   display: flex;
   margin-top: 100px;
   width: 100%;
-  margin-bottom: 100px;
+  margin-bottom: 10px;
   align-items: start; /* Aligns the content to the top */
 }
 
@@ -575,4 +588,32 @@ main{
 .Icons8{
   
   text-align: right;
+}
+
+
+.custom-link {
+  color: #6C63FF;
+  text-decoration: none;
+  
+  position: relative;
+  padding-bottom: 8px; /* Add padding to the bottom for the underline effect */
+  transition: .5s;
+}
+
+.custom-link::after {
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: #6C63FF;
+  display: block;
+  margin: auto;
+  position: absolute; /* Absolute positioning so it appears directly under the link */
+  bottom: 0; /* Position it at the bottom of the link */
+  left: 0; /* Start from the left side */
+  right: 0; /* End at the right side */
+  transition: .5s;
+}
+
+.custom-link:hover::after {
+  width: 100%;
 }
