added landing image, more project content, and mor

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,600;1,300&family=ZCOOL+XiaoWei&display&family=Marcellus&display=swap');
 
 *{
@@ -133,6 +134,7 @@ a{
 .introduction-image img {
     width: 100%;
     height: auto;
+    scale: 2;
 }
 
 .highlight {
@@ -340,7 +342,8 @@ body {
   font-size: 2rem; /* Adjust as needed */
   text-align: left;
   margin-bottom: 20px;
-  font-weight: 100;
+  font-weight: 100px;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 .project-details {
@@ -395,13 +398,15 @@ table, th, td {
   position: absolute;
   background-color: #d3d3d3; /* Grey color */
   border: #000000 solid 1px; /* Black border */
+  
 }
 
 .rectangle img {
   width: 100%;
   height: 100%;
-  object-fit: cover;  /* Ensures the image covers the rectangle without distorting */
+  object-fit: contain;  /* Ensures the image covers the rectangle without distorting */
   display: block;     /* Removes any default spacing/margin */
+  scale: 1.5;
 }
 .image1 {
   width: 411px;
@@ -550,7 +555,7 @@ p.short-about{
 
 
 h1{
-  font-family: 'ZCOOL XiaoWei', serif;
+  font-family: 'Noto Sans KR', sans-serif;
   color: #28282B;
   margin-bottom: 1rem;
   font-size: 46px;
@@ -616,4 +621,9 @@ main{
 
 .custom-link:hover::after {
   width: 100%;
+}
+
+@media (max-width: 1530px) {
+  
+  
 }
