--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,600;1,300&family=ZCOOL+XiaoWei&display&family=Marcellus&display=swap');
 
+:root[data-theme="light"]{
+  --switch-bg: #F5F5F6;
+  --switch-circle-bg: #FFD371;
+  --icon-sun: #997f44;
+  --icon-moon: #B1B0B5;
+  --text-p:#1E1E1E;
+  --switch-circle-pos: 0.22rem;
+}
+
+:root[data-theme="dark"]{
+  --page-bg: #1E1E1E;
+  --switch-bg: #515153;
+  --switch-circle-bg: #7190FF;
+  --icon-sun: #B1B0B5;
+  --icon-moon: #DCE3FF;
+  --text-p:#ffffff;
+  --nav-bar:rgba(255, 254, 254, 0.06) ;
+
+  --switch-circle-pos: 3rem;
+}
+
+:root{
+  --default-border-radius: 8px;
+  --default-transition: color .3s ease-in-out, background-color .3s ease-in-out, border-color .3s ease-in-out, fill .3s ease-in-out, transform .3s ease-in-out;
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-}
+    
+    z-index: 5;
+    
+
+  }
+  
 
 .container{
     width: 100%;
@@ -16,6 +47,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 
 h1{
@@ -25,7 +57,7 @@ h1{
 
 /*Nav Bar*/
 
-a{
+  a{
     color: #06cccc;
   }
   
@@ -35,9 +67,11 @@ a{
 
   .nav-container {
     width: 100%;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.06); /* 0.5 is the alpha (opacity) */
+    border-bottom: 1px solid rgba(107, 101, 101, 0.06); /* 0.5 is the alpha (opacity) */
+    border-bottom: 1px solid var(--nav-bar); /* 0.5 is the alpha (opacity) */
     margin: 0;
     padding: 0;
+    position: relative;
 }
 
   nav{
@@ -72,7 +106,8 @@ a{
     position: relative;
   }
   .nav-links ul li a{
-    color: #2b323c;
+    color: var(--text-p);
+    color: var(--text-p);
     text-decoration: none;
     font-size: 13px;
   }
@@ -100,6 +135,46 @@ a{
     background-size: cover;
     text-align: center;
     color: #fff;
+  }
+
+  #theme-switcher{
+    position: absolute; 
+    top: 0;
+    right: 0;
+    margin: 10px;
+    background-color: var(--switch-bg);
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    gap: 1.33rem;
+    cursor: pointer;
+    padding: .36rem;
+    transform: var(--default-border-radius);
+  }
+
+  #theme-switcher::before{
+    content: '';
+    position: absolute;
+    width: 1.80rem;
+    height: 1.80rem;
+    background-color: var(--switch-circle-bg);
+    border-radius: 50px;
+    z-index: 0;
+    left: 0;
+    transform: translateX(var(--switch-circle-pos));
+    transition: var(--default-transition);
+  }
+  
+  #theme-switcher svg{
+    z-index: 1;
+  }
+
+  #icon-sun{
+    fill: var(--icon-sun);
+  }
+
+  #icon-moon{
+    fill: var(--icon-moon);
   }
 
   /* Body */
@@ -264,6 +339,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     margin: 0;
+    background-color: var(--page-bg);
 }
 
 .content-container {
@@ -274,6 +350,7 @@ body {
     background-color: #fff;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     padding: 20px 0; /* Adjusted padding for a not-so-slim footer */
+    background-color: var(--page-bg);
 }
 
 .footer-content {
@@ -564,6 +641,7 @@ h1{
   font-weight: 400;
   max-width: 800px;
   line-height: 54px;
+  color: var(--text-p);
 }
 
 p{
@@ -575,6 +653,7 @@ p{
   padding-bottom:  18px;
   margin-bottom: 18px;
   color:#28282B;
+  color: var(--text-p);
 }
 
 main{
